# bot_builder

./: Cargo.toml  log.yaml  products.json
src/: catalogue.rs  main.rs
