[package]
name = "bot_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = {git = "https://github.com/teloxide/teloxide", features=["macros", "ctrlc_handler", "auto-send"]}
tokio = {version = "1.16.0", features = ["rt-multi-thread", "macros"]}
log = "0.4.14"
tokio-stream = "0.1.8"
dotenv = "0.15.0"
dptree = "0.1.1"
log4rs = "1.0.0"
serde = {version="1.0.136", features=["derive"]}
serde_json = "1.0.79"

